# csv-to

./: .gitignore  Cargo.toml  LICENSE  README.md  baseball-databank.toml  bd-batting.toml  csv2api.toml  hockey-stats-api.toml
.circleci/: config.yml
.scripts/: codecov.sh  run-kcov.sh
csv_converter/: Cargo.toml
csv_converter/src/: code_gen.rs  config.rs  db.rs  input.rs  lib.rs  models.rs  parse_csv.rs  sql_gen.rs  sqlite_code_gen.rs
src/: code_gen.rs  db.rs  lib.rs  main.rs  models.rs  parse_csv.rs
src/actors/: code_gen.rs  mod.rs  sqlite.rs
src/adapters/: csvinput.rs  mod.rs  sqlitestore.rs
src/cache/: json.rs  mod.rs
src/cmd/db/: config.rs  mod.rs
src/commands/: code_gen.rs  input.rs  mod.rs  parse_csv.rs
src/db/: config.rs  mod.rs
src/input/: csv.rs  mod.rs
src/parsers/: csv.rs  mod.rs
src/ports/: app.rs  configservice.rs  inputservice.rs  mod.rs  storageservice.rs
src/storage/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/workers/: code_gen.rs  config.rs  input.rs  mod.rs  output.rs  parse_csv.rs  sql_gen.rs  sqlite.rs  sqlite_code_gen.rs
tests/: cmdlineargs_test.rs
