[package]
name = "csv-to"
version = "0.1.3"
authors = ["Rob Rowe <robrowe04@gmail.com>"]

[workspace]
members = ["csv_converter"]

[dependencies] 
actix = "0.7.0"
barrel = "0.2.3"
codegen = { git = "https://github.com/carllerche/codegen" } # Soon on crates.io
csv = "1.0.0"
csv_converter = { path = "csv_converter"}
exitcode = "1.1.2"
failure = "0.1.3"
futures = "0.1.23"
regex = "1.0.0"
serde = "1.0.70"
serde_derive = "1.0.66"
serde_json = "1.0.19"
sqlite = "0.23.9"
structopt = "0.2.13"
toml = "0.4"

[dev-dependencies]
assert_fs = "0.10.0"