[package]
name = "csv-to"
version = "0.1.3"
authors = ["Rob Rowe <robrowe04@gmail.com>"]
edition = "2018"

#[workspace]
#members = ["csv_converter"]

[dependencies] 
actix = "0.7.0"
ansi_term = "0.11.0"
assert_fs = "0.10.0"
barrel = { git = "https://github.com/rippinrobr/barrel", rev = "25e37caa425b39cab961fa6c962d861b6242aa0e", features = ["sqlite3", "pg"] }
codegen = { git = "https://github.com/carllerche/codegen" } # Soon on crates.io
csv = "1.0.0"
# csv_converter = { path = "csv_converter"}
exitcode = "1.1.2"
failure = "0.1.3"
failure_derive = "0.1.3"
futures = "0.1.23"
indicatif = "0.10.3"
postgres = "0.15.2"
predicates = "1.0.0"
regex = "1.0.0"
serde = "1.0.70"
serde_derive = "1.0.66"
serde_json = "1.0.19"
sqlite = "0.23.9"
structopt = "0.2.13"
toml = "0.4"
glob = "0.2.11" 

[dev-dependencies]
assert_fs = "0.10.0"
