[package]
name = "csv_converter"
version = "0.0.2"
authors = ["Rob Rowe <robrowe04@gmail.com>"]

[dependencies]
barrel = { version = "0.4.0", features = ["sqlite3", "pg"] }
codegen = { git = "https://github.com/carllerche/codegen" } # Soon on crates.io
csv = "1.0.0"
futures = "0.1.23"
regex = "1.0.0"
serde = "1.0.70"
serde_derive = "1.0.66"
serde_json = "1.0.19"
sqlite = "0.23.9"
toml = "0.4"